# velvet

./: .envrc  .gitignore  CHANGELOG.md  CMakeLists.txt  Hello.hs  LICENSE  README.md  default.nix  devenv.nix  draw.cpp  flake.nix  main.cpp  package-lock.json  package.json  test.ts  velvet.cabal
app/: Main.hs
cbits/: init.c
lib/: MyLib.hs
scripts/: build.sh  format.sh
src/: index.html  wasm.js
